# OriginMS

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CODEX_BRIEF.md  MOTION_SPEC.md  STACK_SPEC.md  UX_DOCTRINE.md  biome.json  openapi-ts.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.storybook/: main.ts  preview.tsx
backend/: alembic.ini  openapi.json  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260702_0001_phase2a_hr_leave_auth_audit.py
backend/src/origin_ms/: __init__.py  main.py
backend/src/origin_ms/api/: deps.py  errors.py
backend/src/origin_ms/api/routers/: auth.py  employees.py  leave_requests.py
backend/src/origin_ms/core/: config.py  ids.py  security.py  time.py
backend/src/origin_ms/domain/: __init__.py  entities.py  enums.py  errors.py  leave_policy.py  leave_state_machine.py  permissions.py
backend/src/origin_ms/repositories/: database.py  models.py  sqlalchemy_uow.py
backend/src/origin_ms/schemas/: auth.py  common.py  employees.py  errors.py  leave.py
backend/src/origin_ms/scripts/: export_openapi.py  seed_database.py
backend/src/origin_ms/services/: __init__.py  audit_service.py  auth_service.py  employee_service.py  leave_service.py  notification_stub.py  unit_of_work.py
backend/tests/: conftest.py  test_api_contract.py  test_auth_and_rbac.py  test_employee_endpoints.py  test_leave_api_validation.py  test_leave_policy.py  test_leave_state_machine.py  test_leave_transitions_audit_balance.py  test_sqlalchemy_persistence.py
(+69 files in other folders)
